Fixed python->python3 syntax and added in some setuptools makefile code to see if it will build ipk of pip. Perhaps my build is dirty, will clean and attempt to rebuild python3-pip for clarificatin.

--- a/python3-pip/Makefile
+++ b/python3-pip/Makefile
@@ -34,24 +34,34 @@ define Package/python3-pip/description
   A tool for installing and managing Python packages.
 endef
 
-define Build/Compile
-	$(call Build/Compile/Py3Mod,,\
-		install --prefix="$(PKG_INSTALL_DIR)/usr" \
-	)
+define Host/Compile
+	$(call Build/Compile/Py3Mod,,install --prefix=/usr --root=$(PKG_INSTALL_DIR))
 endef
 
-PYTHON3_PIP_PKG_DIR:=$(PYTHON3_PKG_DIR)/pip-$(PKG_VERSION)-py$(PYTHON_VERSION).egg/pip
+
+define Host/Install
+	$(INSTALL_DIR) $(STAGING_DIR)$(PYTHON3_PKG_DIR)
+	$(CP) \
+		$(PKG_INSTALL_DIR)$(PYTHON3_PKG_DIR)/* \
+		$(STAGING_DIR)$(PYTHON3_PKG_DIR)
+endef
+
+define Build/Compile
+	$(call Build/Compile/Py3Mod,,install --prefix=/usr --root=$(PKG_INSTALL_DIR))
+endef
+
+PYTHON3_PIP_PKG_DIR:=$(PYTHON_PKG_DIR)/pip-$(PKG_VERSION)-py$(PYTHON_VERSION).egg/pip
 define PyPackage/python3-pip/filespec
-+|$(PYTHON3_PKG_DIR)
++|$(PYTHON_PKG_DIR)
 -|$(PYTHON3_PIP_PKG_DIR)/_vendor/distlib/*.exe
 endef
 
 # Backup these files, so that they do not clash with python-setuptools
 # If we install python-pip python-setuptools, we want these to be replaced,
 # since python-pip replaces python-setuptools (when installed)
-define Package/python-pip/preinst
+define Package/python3-pip/preinst
 #!/bin/sh
-cd "$${IPKG_INSTROOT}$(PYTHON3_PKG_DIR)"
+cd "$${IPKG_INSTROOT}$(PYTHON_PKG_DIR)"
 mv -f easy-install.pth easy-install.pth.old
 mv -f site.py site.py.old
 exit 0
@@ -60,17 +70,24 @@ endef
 # And put them back on remove
 define Package/python3-pip/postrm
 #!/bin/sh
-cd "$${IPKG_INSTROOT}$(PYTHON3_PKG_DIR)"
+cd "$${IPKG_INSTROOT}$(PYTHON_PKG_DIR)"
 mv -f easy-install.pth.old easy-install.pth
 mv -f site.py.old site.py
 exit 0
 endef
 
 define PyPackage/python3-pip/install
+	$(INSTALL_DIR) $(1)$(PYTHON3_PKG_DIR)
+	$(CP) \
+		$(PKG_INSTALL_DIR)$(PYTHON3_PKG_DIR)/* \
+		$(1)$(PYTHON3_PKG_DIR)/
 	$(INSTALL_DIR) $(1)/usr/bin
-	$(CP) $(PKG_INSTALL_DIR)/usr/bin/* $(1)/usr/bin
+	$(INSTALL_BIN) \
+		$(PKG_INSTALL_DIR)/usr/bin/easy_install \
+		$(1)/usr/bin/
 endef
 
+$(eval $(call HostBuild))
 $(eval $(call PyPackage,python3-pip))
 $(eval $(call BuildPackage,python3-pip))
 
