--- a/python3-paramiko/Makefile
+++ b/python3-paramiko/Makefile
@@ -24,7 +24,7 @@ define Package/python3-paramiko
   SECTION:=lang
   CATEGORY:=Languages
   TITLE:=SSH2 protocol library
-  DEPENDS:=+python3 +python3-pycrypto +openssh-server +openssh-client +openssh-client-utils +openssh-keygen +openssh-sftp-server +openssh-sftp-client +sshtunnel +libssh2
+  DEPENDS:=+python3 +python3-pycrypto +python3-ecdsa +python3-pip +openssh-server +openssh-client +openssh-client-utils +openssh-keygen +openssh-sftp-server +openssh-sftp-client +sshtunnel +libssh2
 endef
 
 define Package/python3-paramiko/description
