--- a/python3-setuptools/Makefile
+++ b/python3-setuptools/Makefile
@@ -3,17 +3,17 @@
 #
 # This is free software, licensed under the GNU General Public License v2.
 # See /LICENSE for more information.
-# 
+#
 
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=python3-setuptools
-PKG_VERSION:=17.1.1
+PKG_VERSION:=18.2
 PKG_RELEASE:=1
 
 PKG_SOURCE:=setuptools-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://pypi.python.org/packages/source/s/setuptools/
-PKG_MD5SUM:=7edec6cc30aca5518fa9bad42ff0179b
+PKG_MD5SUM:=52b4e48939ef311d7204f8fe940764f4
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/setuptools-$(PKG_VERSION)
 
@@ -33,32 +33,25 @@ define Package/python3-setuptools/description
   Easily download, build, install, upgrade, and uninstall Python packages
 endef
 
-define Host/Compile
-	$(call Build/Compile/Py3Mod,,install --prefix=/usr --root=$(PKG_INSTALL_DIR))
+define Build/Compile
+	$(call Build/Compile/Py3Mod,,\
+		install --root="$(PKG_INSTALL_DIR)" --prefix="/usr" \
+		--single-version-externally-managed \
+	)
 endef
 
-define Host/Install
-	$(INSTALL_DIR) $(STAGING_DIR)$(PYTHON3_PKG_DIR)
+define Build/InstallDev
+	$(INSTALL_DIR) $(PYTHON3_LIB_DIR)
 	$(CP) \
 		$(PKG_INSTALL_DIR)$(PYTHON3_PKG_DIR)/* \
-		$(STAGING_DIR)$(PYTHON3_PKG_DIR)
-endef
-
-define Build/Compile
-	$(call Build/Compile/Py3Mod,,install --prefix=/usr --root=$(PKG_INSTALL_DIR))
+		$(PYTHON3_LIB_DIR)
 endef
 
 define Package/python3-setuptools/install
-	$(INSTALL_DIR) $(1)$(PYTHON3_PKG_DIR)
-	$(CP) \
-		$(PKG_INSTALL_DIR)$(PYTHON3_PKG_DIR)/* \
-		$(1)$(PYTHON3_PKG_DIR)/
 	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_BIN) \
-		$(PKG_INSTALL_DIR)/usr/bin/easy_install \
-		$(1)/usr/bin/
-	$(SED) '1s/#\!.*/#\!\/usr\/bin\/python3/' $(1)/usr/bin/easy_install
+	$(CP) $(PKG_INSTALL_DIR)/usr/bin/* $(1)/usr/bin/
+	#$(SED) '1s/#\!.*/#\!\/usr\/bin\/python3/' $(1)/usr/bin/easy_install
 endef
 
-$(eval $(call HostBuild))
+$(eval $(call Py3Package,python-setuptools))
 $(eval $(call BuildPackage,python3-setuptools))
