--- a/python3-paramiko/Makefile
+++ b/python3-paramiko/Makefile
@@ -19,7 +19,7 @@ include $(INCLUDE_DIR)/package.mk
 $(call include_mk, python3-package.mk)
 
 define Package/python3-paramiko
-  SUBMENU:=Python
+  SUBMENU:=Python3
   SECTION:=lang
   CATEGORY:=Languages
   TITLE:=SSH2 protocol library
