--- a/python3-yaml/Makefile
+++ b/python3-yaml/Makefile
@@ -20,7 +20,7 @@ include $(INCLUDE_DIR)/package.mk
 $(call include_mk, python3-package.mk)
 
 define Package/python3-yaml
-  SUBMENU:=Python
+  SUBMENU:=Python3
   SECTION:=lang
   CATEGORY:=Languages
   TITLE:=PyYAML, YAML parser and emitter for Python
