--- a/requests/Makefile
+++ b/requests/Makefile
@@ -18,6 +18,9 @@ PKG_LICENSE:=Apache 2.0
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 
+# PKG_BUILD_DEPENDS:=python3-setuptools/host
+# HOST_BUILD_DEPENDS:=python3-setuptools/host
+
 include $(INCLUDE_DIR)/package.mk
 $(call include_mk, python3-package.mk)
 
@@ -33,7 +36,7 @@ define Package/requests
 	DEPENDS:=+python3 +python3-setuptools
 endef
 
-MAKE_FLAGS += prefix=/usr
+# MAKE_FLAGS += prefix=/usr
 
 define Package/requests/description
  Requests is the only Non-GMO HTTP library for Python, safe for human 
@@ -47,15 +50,16 @@ define Build/Configure
 endef
 
 define Build/Compile
-	python3 $(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)/setup.py install
+# 	python3 $(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)/setup.py install
+	$(call Build/Compile/PyMod,,install --prefix="/usr" --root="$(PKG_INSTALL_DIR)")
 endef
 
-define Package/requests/install
-	$(INSTALL_DIR) $(1)$(PYTHON3_PKG_DIR)
-	$(CP) \
-		$(PKG_INSTALL_DIR)$(PYTHON3_PKG_DIR)/* \
-		$(1)$(PYTHON3_PKG_DIR)/
-	$(CP) $(PKG_INSTALL_DIR)/* $(1)/
-endef
-
+# define Package/requests/install
+# 	$(INSTALL_DIR) $(1)$(PYTHON3_PKG_DIR)
+# 	$(CP) \
+# 		$(PKG_INSTALL_DIR)$(PYTHON3_PKG_DIR)/* \
+# 		$(1)$(PYTHON3_PKG_DIR)/
+# 	$(CP) $(PKG_INSTALL_DIR)/* $(1)/
+# endef
+$(eval $(call PyPackage,requests))
 $(eval $(call BuildPackage,requests))
